--- a/assets/dialog.ui
+++ b/assets/dialog.ui
@@ -128,7 +128,7 @@ padding: 1px 18px 1px 3px;</string>
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:12pt;&quot;&gt;Password&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label_3">
+  <widget class="QLabel" name="label_url">
    <property name="geometry">
     <rect>
      <x>20</x>
